# gh-pr-analyzer

./: IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  USAGE.md  main.py  pyproject.toml  pytest.ini
src/gh_pr_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  github_client.py
tests/: README.md  __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_github_client.py
