[project]
name = "gh-pr-analyzer"
version = "0.1.0"
description = "Analyze GitHub PRs and show why they cannot be merged"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[project.scripts]
gh-pr-analyzer = "gh_pr_analyzer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_pr_analyzer"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.0",
]
